--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jquery": "^3.6.4",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22"
   }
